# jikokanri

./: README.md
daily-review/: .gitignore  AGENTS.md  CHANGELOG.md  README.md  RELEASE_CHECKLIST.md  RELEASE_CHECKLIST_V1.2.md  pyproject.toml
daily-review/config/: api.example.json  app.example.json  notifications.example.json  priorities.example.json  recovery.example.json  scheduler.example.json
daily-review/data/monthly/: 2026-07.json
daily-review/data/weekly/: 2026-07-14_2026-07-20.json
daily-review/docs/: backup-and-restore.md  chatgpt-command-api.md  chatgpt-integration.md  configuration.md  daily-workflow.md  data-integrity.md  getting-started.md  launchd.md  migration-v1.0-to-v1.3.md  operational-flows.md  scheduler.md  security.md  task-rollover.md  tasks-and-rollover.md  troubleshooting-scheduler.md  troubleshooting.md  weekly-monthly-reports.md
daily-review/docs/releases/: v1.3.0.md
daily-review/logs/: monthly_2026-07.md  weekly_2026-07-14_2026-07-20.md
daily-review/scripts/: smoke_v11.py  smoke_v12.py
daily-review/src/daily_review/: __init__.py  archive.py  chat_import.py  chat_schema.py  chat_workflow.py  cli.py  command_api.py  command_models.py  configuration.py  csv_export.py  dashboard.py  date_utils.py  doctor.py  draft_workflow.py  evaluation.py  goal_coach.py  goal_design.py  goals.py  handoff.py  integrity.py  markdown.py  migration.py  models.py  notifications.py  operation_lock.py  operational_flows.py  organizer.py  (+18 more)
daily-review/src/daily_review.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
daily-review/templates/: chat_import_prompt.md  night_review_prompt.md  tomorrow_plan_prompt.md  weekly_review_prompt.md
daily-review/tests/: test_approval.py  test_close_day.py  test_phase2_flow.py  test_phase6_operational.py  test_phase7_reporting.py  test_phase8_release.py  test_phase9_ux.py  test_save_night.py  test_start.py  test_storage.py  test_task_results.py  test_today.py  test_v11_backward_compatibility.py  test_v11_date_boundaries.py  test_v11_e2e.py  test_v11_failure_recovery.py  test_v11_migration.py  test_v11_phase1_input.py  test_v11_phase2_organize.py  test_v11_phase3_review_approval.py  test_v11_phase4_reflect.py  test_v11_phase5_chat_import.py  test_v11_phase6_chat_workflow.py  test_v11_phase7_handoff.py  test_v11_phase8_release_candidate.py  test_v11_phase9_operational.py  test_v12_boundaries.py  test_v12_final_operational.py  test_v12_goal_coach.py  test_v12_goal_dependencies.py  test_v12_goal_evaluation.py  test_v12_goal_relationships.py  test_v12_goal_steps.py  test_v12_goal_storage.py  test_v12_migration_matrix.py  test_v12_phase1_goals.py  test_v12_phase2_milestones.py  test_v12_phase3_planning.py  test_v12_rc1.py  test_v12_rc1_e2e.py  (+23 more)
(+1 files in other folders)
