[project]
name = "daily-review"
dynamic = ["version"]
description = "Local CLI for daily reviews, raw logs, tomorrow plans, and Tuesday-Monday weekly summaries."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.9",
  "pydantic>=2",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
]

[project.scripts]
daily-review = "daily_review.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "daily_review.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
