[project]
name = "daily-review"
dynamic = ["version"]
description = "Local CLI for daily reviews, raw logs, tomorrow plans, and Tuesday-Monday weekly summaries."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.9",
  "pydantic>=2",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
  "pytest-cov>=7",
  "ruff>=0.12",
  "mypy>=1.15",
  "build>=1.2",
]

[project.scripts]
daily-review = "daily_review.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "daily_review.__version__"}

[tool.setuptools.data-files]
"share/daily-review/templates" = ["templates/*.md"]
"share/daily-review/config" = ["config/*.example.json"]
"share/daily-review/docs" = ["docs/*.md", "docs/releases/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
files = [
  "src/daily_review/configuration.py",
  "src/daily_review/release_readiness.py",
  "src/daily_review/migration.py",
  "src/daily_review/archive.py",
  "src/daily_review/recovery.py",
  "src/daily_review/operation_lock.py",
  "src/daily_review/scheduler_install.py",
  "src/daily_review/command_models.py",
]
warn_unused_configs = true
show_error_codes = true
